Добавлены базовый стили, разметка

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,6 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+.theme-light {
+
+}
