--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,126 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: 
+    repeating-linear-gradient(to top, transparent 0 2px, var(--gradient-color-1) 2px 4px),
+    repeating-linear-gradient(90deg, transparent 0 2px, var(--gradient-color-1) 2px 4px),
+    linear-gradient(to bottom, var(--gradient-color-2) 0.01%, var(--gradient-color-3) 100%);
+  font-family: var(--main-font-family);
+  font-size: var(--main-font-size);
 }
+
+.button {
+  border: 2px solid var(--themes-main-color, #000);
+  background: var(--themes-background, #FFF);
+  font-family: var(--accent-font-family);
+  font-size: 14px;
+}
+
+.header {
+  display: flex;
+  margin: 102px auto;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  inline-size: clamp(23.188rem, 100%, 43.5rem);
+  block-size: clamp(20.188rem, 100%, 22.75rem);
+  padding: clamp(120px, 7.1479rem + 1.5023vw, 136px) 0 23px;
+  background-color: var(--themes-background, #FFF);
+  border: 2px solid var(--themes-main-color, #000);
+}
+
+.header__title {
+  color: var(--themes-main-color, #000);
+  font-family: var(--accent-font-family);
+  font-size: var(--title-font-size);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.header__subtitle {
+  color: var(--themes-main-color, #000);
+  font-family: var(--accent-font-family);
+  font-size: var(--subtitle-font-size);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.theme-menu__item {
+  font-family: var(--accent-font-family);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  color: var(--themes-main-color, #000);
+}
+
+.theme-menu__button {
+  border: none;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.card__list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.card__list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.card {
+  background: var(--themes-background, #FFF);
+  border: 2px solid var(--themes-main-color, #000);
+  inline-size: clamp(23.188rem, 100%, 43.5rem);
+  block-size: clamp(20.188rem, 100%, 22.75rem);
+}
+
+.card__title {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: var(--card-title-font-weight);
+  line-height: normal;
+  padding: 4px 10px 6px;
+}
+
+.card__image {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+
+.card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 25px;
+}
+
+.card__button {
+  align-self: flex-end;
+  display: flex;
+  min-inline-size: 130px;
+  padding: 9px 17px;
+  justify-content: center;
+
+}
+
