--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,17 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+    --themes-background: #FFF;
+    --gradient-color-1: #d3d3d3;
+    --gradient-color-2: #e7e7e7;
+    --gradient-color-3: #1a1a1a;
+    --themes-main-color: #000;
+    --main-font-family: 'Inter', sans-serif;
+    --main-font-size: 18px;
+    --accent-font-family: 'Press Start 2P', sans-serif;
+    --title-font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+    --subtitle-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+    --card-text-font-weight: 400;
+    --card-title-font-weight: 700;
+}
+
