--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: 
-    repeating-linear-gradient(to top, transparent 0 2px, var(--gradient-color-1) 2px 4px),
-    repeating-linear-gradient(90deg, transparent 0 2px, var(--gradient-color-1) 2px 4px),
-    linear-gradient(to bottom, var(--gradient-color-2) 0.01%, var(--gradient-color-3) 100%);
+  background-image: var(--background-image);
   font-family: var(--main-font-family);
   font-size: var(--main-font-size);
+  color: var(--themes-main-color);
 }
 
 .button {
@@ -72,7 +70,10 @@
 .theme-menu__list {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  align-items: flex-start;
+  padding-top: 5px;
+  padding-left: 20px;
+  gap: 12px;
 }
 
 .theme-menu__item {
@@ -86,9 +87,22 @@
 }
 
 .theme-menu__button {
+  position: relative;
   border: none;
   text-transform: uppercase;
   background-color: transparent;
+}
+
+.theme-menu__button:disabled::before {
+  content: '▶';
+  position: absolute;
+  left: -10px;
+  color: var(--themes-main-color);
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
 }
 
 .card__list {
@@ -105,6 +119,7 @@
 }
 
 .card {
+  margin: auto;
   background: var(--themes-background, #FFF);
   border: 2px solid var(--themes-main-color, #000);
   inline-size: clamp(23.188rem, 100%, 43.5rem);
@@ -131,12 +146,37 @@
   padding: 25px;
 }
 
-.card__button {
+.card__button-list {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: nowrap;
+  gap: 5px;
+}
+
+.card__icon-button {
+  border: none;
+  fill: var(--themes-main-color);
+}
+
+.card__like-button {
   align-self: flex-end;
   display: flex;
   min-inline-size: 130px;
   padding: 9px 17px;
   justify-content: center;
-
 }
 
+.footer {
+  margin: 50px auto 102px;
+}
+
+.footer_button {
+  display: flex;
+  padding: 15px 19px;
+  gap: 8px;
+  align-items: center;
+}
+
+.floppy-icon {
+  inline-size: 21px;
+}
