--- a/styles/style.css
+++ b/styles/style.css
@@ -20,15 +20,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: var(--background-image);
+  background-image: var(--background-image, #fff);
   font-family: var(--main-font-family);
   font-size: var(--main-font-size);
-  color: var(--themes-main-color);
+  font-variation-settings: 'wght' var(--text-font-weight);
+  color: var(--themes-main-color, #000);
 }
 
 .button {
   border: 2px solid var(--themes-main-color, #000);
-  background: var(--themes-background, #FFF);
+  background: var(--themes-background, #fff);
   font-family: var(--accent-font-family);
   font-size: 14px;
   cursor: pointer;
@@ -37,15 +38,15 @@
 
 .header {
   display: flex;
-  margin: 102px auto;
+  margin: 100px auto;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   gap: 20px;
   inline-size: clamp(23.188rem, 100%, 43.5rem);
   block-size: clamp(20.188rem, 100%, 22.75rem);
-  padding: clamp(120px, 7.1479rem + 1.5023vw, 136px) 0 23px;
-  background-color: var(--themes-background, #FFF);
+  padding: clamp(7.5rem, 1.502vw + 7.148rem, 8.5rem) 0 25px;
+  background-color: var(--themes-background, #fff);
   border: 2px solid var(--themes-main-color, #000);
 }
 
@@ -155,7 +156,7 @@
 
 .card {
   margin: auto;
-  background: var(--themes-background, #FFF);
+  background: var(--themes-background, #fff);
   border: 2px solid var(--themes-main-color, #000);
   inline-size: clamp(23.188rem, 100%, 43.5rem);
   block-size: clamp(20.188rem, 100%, 22.75rem);
@@ -164,15 +165,16 @@
 .card__title {
   font-size: 18px;
   font-style: normal;
-  font-weight: var(--card-title-font-weight);
+  font-variation-settings: "wght" var(--card-title-font-weight);
   line-height: normal;
-  padding: 3px 10px 3px;
+  padding: 3px 10px;
 }
 
 .card__image {
   width: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
+  object-position: center;
   filter: none;
   transition: filter 0.3s ease;
 }
@@ -292,7 +294,6 @@
   border-top: 2px solid var(--themes-main-color);
   border-bottom: 2px solid var(--themes-main-color);
   block-size: 696px;
-
 }
 
 .card__image_watermark {
@@ -305,21 +306,24 @@
   opacity: 0.5;
   text-transform: uppercase;
   text-shadow:
-      -1px 0 var(--watermark-shadow-color), 
-    0 1px var(--watermark-shadow-color), 
-    1px 0 var(--watermark-shadow-color), 
+    -1px 0 var(--watermark-shadow-color),
+    0 1px var(--watermark-shadow-color),
+    1px 0 var(--watermark-shadow-color),
     0 -1px var(--watermark-shadow-color);
-
+  z-index: 1;
 }
 
-@supports((text-stroke: 1px var(--watermark-shadow-color)) or (-webkit-text-stroke: 1px var(--watermark-shadow-color))) {
-  .card__image_watermark {
-      -webkit-text-stroke: 1px var(--watermark-shadow-color);
-      text-stroke: 1px var(--watermark-shadow-color);
-      text-shadow: none;
-  }
-} 
+@supports (
+  (text-stroke: 1px var(--watermark-shadow-color)) or
+    (-webkit-text-stroke: 1px var(--watermark-shadow-color))
+) {
 
+  .card__image_watermark {
+    -webkit-text-stroke: 1px var(--watermark-shadow-color);
+    text-stroke: 1px var(--watermark-shadow-color);
+    text-shadow: none;
+  }
+}
 
 .footer {
   margin: 50px auto 102px;
@@ -329,8 +333,7 @@
   position: relative;
   display: grid;
   grid-template-columns: 21px auto;
-  grid-template-areas: 
-  "floppy button-text";
+  grid-template-areas: 'floppy button-text';
   align-items: center;
   padding: 15px 20px;
   gap: 8px;
@@ -373,9 +376,9 @@
 }
 
 .dialog {
-  padding: 30px 30px;
-  color: inherit;
-  background-color: var(--themes-background, #FFF);
+  padding: 30px;
+  color: var(--themes-main-color, #000);
+  background-color: var(--themes-background, #fff);
   border: 2px solid var(--themes-main-color, #000);
   position: fixed;
   inset: 0;
@@ -384,15 +387,15 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.dialog[open]{
+.dialog[open] {
   display: grid;
   grid-template-columns: 39px 1fr;
   grid-template-rows: 63px 1fr;
   row-gap: 30px;
   column-gap: 20px;
-  grid-template-areas: 
-  "floppy dialog-text"
-  "dialog-button dialog-button";
+  grid-template-areas:
+    'floppy dialog-text'
+    'dialog-button dialog-button';
   justify-items: stretch;
   align-items: center;
 }
@@ -419,12 +422,11 @@
 }
 
 dialog::backdrop {
-  background-color: rgb(0 0 0 / .75);
-} 
-
-
+  background-color: rgb(0 0 0 / 0.75);
+}
 
 /*Filters*/
+
 .card__list-item:nth-child(1) .card__image:hover {
   filter: grayscale(0.8);
   transition: filter 0.3s ease;
@@ -465,18 +467,18 @@ dialog::backdrop {
   transition: filter 0.3s ease;
 }
 
-
 @media (width<=375px) {
+
   .footer_button {
-      display: grid;
-      grid-template-rows: 28px auto;
-      grid-template-columns: auto;
-      grid-template-areas: 
-      "floppy"
-      "button-text";
+    display: grid;
+    grid-template-rows: 28px auto;
+    grid-template-columns: auto;
+    grid-template-areas:
+      'floppy'
+      'button-text';
   }
 
-  .dialog{
-      padding: 30px 40px;
+  .dialog {
+    padding: 30px 40px;
   }
 }
