--- a/styles/style.css
+++ b/styles/style.css
@@ -383,12 +383,11 @@
   border: 2px solid var(--themes-main-color, #000);
   position: fixed;
   inset: 0;
-  max-inline-size: clamp(21.313rem, 40vw, 22.313rem);
-  min-block-size: 12.188rem;
   transition: opacity 0.3s ease-in-out;
+  max-inline-size: clamp(21.313rem, 80%, 22.313rem);
 }
 
-.dialog[open] {
+.dialog__form {
   display: grid;
   grid-template-columns: 39px 1fr;
   grid-template-rows: 63px 1fr;
