--- a/styles/style.css
+++ b/styles/style.css
@@ -334,20 +334,15 @@
   position: relative;
   display: grid;
   grid-template-columns: 21px auto;
-  grid-template-areas: 'floppy button-text';
   align-items: center;
   padding: 15px 20px;
   gap: 8px;
 }
 
-.footer__button_text {
-  grid-area: button-text;
-}
 
 .floppy-icon {
   inline-size: 100%;
   block-size: 100%;
-  grid-area: floppy;
 }
 
 .button__effects::before {
@@ -393,9 +388,6 @@
   grid-template-rows: 63px 1fr;
   row-gap: 30px;
   column-gap: 20px;
-  grid-template-areas:
-    'floppy dialog-text'
-    'dialog-button dialog-button';
   justify-items: stretch;
   align-items: center;
 }
@@ -408,7 +400,6 @@
   font-weight: 400;
   line-height: 150%; /* 21px */
   text-transform: uppercase;
-  grid-area: dialog-text;
   inline-size: clamp(12.375rem, 100%, 14.625rem);
 }
 
@@ -416,9 +407,13 @@
   position: relative;
   display: flex;
   justify-content: center;
-  grid-area: dialog-button;
-  max-block-size: 38px;
-  inline-size: clamp(257px, 100%, 293px);
+  inline-size: 100%;
+
+}
+
+.dialog__form {
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 dialog::backdrop {
@@ -478,9 +473,6 @@ dialog::backdrop {
     display: grid;
     grid-template-rows: 28px auto;
     grid-template-columns: auto;
-    grid-template-areas:
-      'floppy'
-      'button-text';
   }
 
   .dialog {
