--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,9 @@
   flex-direction: column;
   align-items: center;
   background-image: var(--background-image, #fff);
-  font-family: var(--main-font-family);
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: var(--main-font-family), sans-serif;
   font-size: var(--main-font-size);
   font-variation-settings: 'wght' var(--text-font-weight);
   color: var(--themes-main-color, #000);
@@ -31,7 +33,7 @@
 .button {
   border: 2px solid var(--themes-main-color, #000);
   background: var(--themes-background, #fff);
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), fantasy;
   font-size: 14px;
   cursor: pointer;
   padding: 9px 17px;
@@ -39,7 +41,7 @@
 
 .header {
   display: flex;
-  margin: 100px auto;
+  margin: 104px auto;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
@@ -51,20 +53,20 @@
   outline: 2px solid var(--themes-main-color, #000);
 }
 
-.header__title {
+.header__logo {
   color: var(--themes-main-color, #000);
-  font-family: var(--accent-font-family);
-  font-size: var(--title-font-size);
+  font-family: var(--accent-font-family), fantasy;
+  font-size: var(--logo-size);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-transform: uppercase;
 }
 
-.header__subtitle {
+.header__title {
   color: var(--themes-main-color, #000);
-  font-family: var(--accent-font-family);
-  font-size: var(--subtitle-font-size);
+  font-family: var(--accent-font-family), fantasy;
+  font-size: var(--title-font-size);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -81,7 +83,7 @@
 }
 
 .theme-menu__item {
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), fantasy;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -154,7 +156,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-wrap: nowrap;
 }
 
 .card {
@@ -169,7 +170,7 @@
   font-style: normal;
   font-variation-settings: 'wght' var(--card-title-font-weight);
   line-height: normal;
-  padding: 3px 10px;
+  padding: 5px 11px;
 }
 
 .card__image {
@@ -178,6 +179,53 @@
   aspect-ratio: 1/1;
   object-fit: cover;
   object-position: center;
+}
+
+/*Filters*/
+
+.card__list-item:nth-child(1) .card__image {
+  filter: grayscale(0.8);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(2) .card__image {
+  filter: contrast(140%);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(3) .card__image {
+  filter: blur(0.2rem);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(4) .card__image {
+  filter: saturate(158%) brightness(110%);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(5) .card__image {
+  filter: brightness(150%);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(6) .card__image {
+  filter: opacity(0.5);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(7) .card__image {
+  filter: sepia(80%);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item:nth-child(8) .card__image {
+  filter: hue-rotate(-45deg);
+  transition: filter 0.3s ease;
+}
+
+.card__list-item .card__image:hover {
+  filter: none;
+  transition: filter 0.3s ease;
 }
 
 .card__text {
@@ -201,10 +249,6 @@
   padding: 0;
 }
 
-.sparks {
-  opacity: 0;
-}
-
 .card__icon-button:focus {
   outline: none;
 }
@@ -212,73 +256,6 @@
 .card__icon-button:focus-visible {
   border: 2px solid var(--themes-main-color);
   transition: border 0.3s ease;
-}
-
-.main-body {
-  fill: transparent;
-  transition: fill 0.3s linear;
-}
-
-.core {
-  fill: transparent;
-  transition: fill 0.3s linear 0.05s;
-}
-
-.contur {
-  fill: var(--contur-color);
-  transition: fill 0.1s linear;
-}
-
-.card__icon-button:hover .main-body {
-  fill: var(--contur-color);
-  transition: fill 0.3s linear;
-}
-
-.card__icon-button:hover .core {
-  fill: var(--contur-color);
-  transition: fill 0.3s linear 0.05s;
-}
-
-.card__icon-button:active .main-body {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear;
-}
-
-.card__icon-button:active .core {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear 0.05s;
-}
-
-.like-icon.is-liked .core {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear 0.05s;
-}
-
-.like-icon.is-liked .main-body {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear 0.05s;
-}
-
-.like-icon.is-liked .contur {
-  fill: var(--fill-color);
-  transition: fill 0.3s linear 0.06s;
-}
-
-.like-icon.is-liked .heart {
-  transform-origin: center;
-  animation-name: heart-scale;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-in;
-  animation-delay: 0.1s;
-  animation-direction: alternate;
-}
-
-.like-icon.is-liked .sparks {
-  animation-name: sparks-opacity;
-  animation-duration: 0.3s;
-  animation-delay: 0.3s;
-  animation-timing-function: ease-in;
-  animation-direction: alternate;
 }
 
 .card__like-button {
@@ -292,17 +269,18 @@
 
 .card__image_container {
   position: relative;
+  block-size: max(371px, 696px);
   border-top: 2px solid var(--themes-main-color);
   border-bottom: 2px solid var(--themes-main-color);
 }
 
 .card__image_watermark {
   position: absolute;
-  top: 20px;
-  right: 10px;
+  top: 25px;
+  right: 25px;
   mix-blend-mode: hard-light;
   color: var(--themes-main-color);
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), fantasy;
   opacity: 0.5;
   text-transform: uppercase;
   text-shadow:
@@ -326,11 +304,13 @@
   }
 }
 
-.footer {
+.bottom-bar {
+  display: flex;
+  justify-content: center;
   margin: 50px auto 100px;
 }
 
-.footer_button {
+.bottom-bar__button {
   position: relative;
   display: grid;
   grid-template-columns: 21px auto;
@@ -338,7 +318,6 @@
   padding: 15px 20px;
   gap: 8px;
 }
-
 
 .floppy-icon {
   inline-size: 100%;
@@ -394,7 +373,7 @@
 
 .dialog__text {
   display: block;
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), fantasy;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -408,7 +387,6 @@
   display: flex;
   justify-content: center;
   inline-size: 100%;
-
 }
 
 .dialog__form {
@@ -420,56 +398,9 @@ dialog::backdrop {
   background-color: rgb(0 0 0 / 0.75);
 }
 
-/*Filters*/
-
-.card__list-item:nth-child(1) .card__image {
-  filter: grayscale(0.8);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(2) .card__image {
-  filter: contrast(140%);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(3) .card__image {
-  filter: blur(0.2rem);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(4) .card__image {
-  filter: saturate(158%) brightness(110%);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(5) .card__image {
-  filter: brightness(150%);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(6) .card__image {
-  filter: opacity(0.5);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(7) .card__image {
-  filter: sepia(80%);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item:nth-child(8) .card__image {
-  filter: hue-rotate(-45deg);
-  transition: filter 0.3s ease;
-}
-
-.card__list-item .card__image:hover {
-  filter: none;
-  transition: filter 0.3s ease;
-}
-
 @media (width<=375px) {
 
-  .footer_button {
+  .bottom-bar__button {
     display: grid;
     grid-template-rows: 28px auto;
     grid-template-columns: auto;
@@ -477,5 +408,14 @@ dialog::backdrop {
 
   .dialog {
     padding: 30px 40px;
+  }
+
+  .card__image_watermark {
+    position: absolute;
+    right: 11px;
+  }
+
+  .card__image_container {
+    block-size: min(371px, 696px);
   }
 }
